# OpenCL_Batch_STFT

./: .gitignore  CMakelists.txt  LICENSE  STFT_SYCL.sln  cl_embedded.h  initial_build.bat
CL_Tester/: CL_Tester.cpp  CL_Tester.vcxproj  CL_Tester.vcxproj.filters  DaC.cl  pch.h
STFT_SYCL/: CMakeLists.txt  DaC.cl  KERNEL_Embedder.py  OpenclCTemplate.cl  STFT.cpp  STFT.h  STFT_SYCL.vcxproj  STFT_SYCL.vcxproj.filters  bit_reverse.cl  bit_reverse_STFT.cl  butterfly_STFT.cl  butterfly_stage.cl  cl_embedded.h  cl_global_custom.cpp  cl_global_custom.h  cl_inside.h  faust_LPF.hpp  hamming.cl  image_writer.cl  integrate_DaC.cl  librosa_stft.py  overlap.cl  split_high_band.cl  split_low_band.cl  split_mid_band.cl  to_dbfs.cl  to_power.cl  windowing.cl
STFT_SYCL/GPGPU_frame/include/: CL_Wrapper.h  GPGPU.h  cl_global_custom.h
STFT_SYCL/GPGPU_frame/src/: cl_global_custom.cpp
STFT_SYCL/Kcodes/: to_dbfs.cl  windowing.cl
STFT_SYCL/Kcodes/Code_Base/: DaC.cl  KERNEL_Embedder.py  STFT.cl  STFT_entry.cl  integrate_DaC.cl  split_mid_band.cl  to_power.cl
STFT_SYCL/Kcodes/KLPD/: KLPDS_MAIN.py
STFT_SYCL/Kcodes/KLPD/Lint_N_Preprocess/: CMakeLists.txt
STFT_SYCL/Kcodes/KLPD/Lint_N_Preprocess/src/: main.cpp
STFT_SYCL/Kcodes/KLPD/script_base/: Daemon.py  Project_Interface.py
STFT_SYCL/include/: STFT.h  cl_embedded.h  faust_LHPF.hpp
STFT_SYCL/src/: STFT.cpp
linux_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
win_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  (+10 more)
